# halo2-evm-verifier

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  lib.rs  main.rs  opts.rs  simple.rs
src/circuits/: fibonacci.rs  function.rs  mod.rs  simple.rs
src/circuits/gadgets/: is_zero.rs
