[package]
name = "halo2-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2", package = "halo2curves" }
snark_verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", package = "snark-verifier" }
rand = "0.8.5"
itertools = "0.11.0"
hex = "0.4.3"
